--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>س.через.силу.ك: 🪬 | TITAN AI v6.0</title>
@@ -553,6 +555,72 @@
     </div>
 
     <script>
+        // === 1. ПІДКЛЮЧЕННЯ FIREBASE (ВСТАВЛЯТИ ПЕРШИМ У <script>) ===
+// Переконайся, що в <head> додано скрипти Firebase SDK
+const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "YOUR_PROJECT.firebaseapp.com",
+    databaseURL: "https://YOUR_PROJECT.firebaseio.com",
+    projectId: "YOUR_PROJECT",
+    storageBucket: "YOUR_PROJECT.appspot.com",
+    messagingSenderId: "YOUR_ID",
+    appId: "YOUR_APP_ID"
+};
+
+// Ініціалізація (якщо ще не ініціалізовано)
+if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+}
+const db = firebase.database();
+
+// === 2. СИСТЕМА ПАРТНЕРКИ (КНОПКА ТА ЛОГІКА) ===
+(function() {
+    const authorBox = document.createElement('div');
+    authorBox.style.cssText = `
+        position: fixed; bottom: 20px; right: 20px; z-index: 10001;
+        width: 55px; height: 55px; background: #ff6b00; border-radius: 50%;
+        display: flex; align-items: center; justify-content: center;
+        cursor: pointer; box-shadow: 0 0 15px rgba(255, 107, 0, 0.5);
+        border: 2px solid rgba(255,255,255,0.2); transition: 0.3s;
+    `;
+    authorBox.innerHTML = `<span style="font-size: 22px;">👤</span>`;
+    document.body.appendChild(authorBox);
+
+    authorBox.onclick = async () => {
+        // Перевірка на повторне введення (захист по LocalStorage)
+        if (localStorage.getItem('promo_used')) {
+            showNotification("ВЫ УЖЕ ИСПОЛЬЗОВАЛИ КОД");
+            return;
+        }
+
+        const promo = prompt("ВВЕДИТЕ КОД АВТОРА:");
+        if (!promo) return;
+        const cleanPromo = promo.toUpperCase().trim();
+
+        try {
+            const ref = db.ref('affiliates/' + cleanPromo);
+            const snap = await ref.once('value');
+            
+            if (snap.exists()) {
+                // Додаємо +1 в базу Firebase
+                await ref.update({ count: snap.val().count + 1 });
+                // Блокуємо повторне введення на цьому пристрої
+                localStorage.setItem('promo_used', 'true');
+                
+                if(typeof AudioFX !== 'undefined') AudioFX.play('complete');
+                showNotification("КОД АКТИВИРОВАН! СИСТЕМА ОБНОВЛЕНА.");
+            } else {
+                showNotification("ТАКОГО КОДА НЕ СУЩЕСТВУЕТ");
+            }
+        } catch (e) {
+            console.error(e);
+            showNotification("ОШИБКА СВЯЗИ С БАЗОЙ");
+        }
+    };
+})();
+
+// === ДАЛІ ЙДЕ Твій ОСНОВНИЙ КОД (TitanDB, updateGlobalUI і т.д.) ===
+
         // TITAN DATABASE 6.0 — 55 УПРАЖНЕНИЙ С МАТРИЦЕЙ ТИПОВ
         const TitanDB = [
             // Плечевой пояс / Тяги (PULL)
