--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<head><script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -554,48 +553,56 @@
         </div>
     </div>
     <script>
-    // === ПАРТНЕРКА (БЕЗПЕЧНА ВЕРСІЯ) ===
+// === ПОЧАТОК СКРИПТА (ЗАМІНИТИ ВЕРХІВКУ) ===
+const firebaseConfig = {
+    apiKey: "AIzaSyDcsXkmVb9lw5C4ZCLf1PMoLqb5ZO2nA3Y",
+    authDomain: "vip-shop-a2ec4.firebaseapp.com",
+    databaseURL: "https://vip-shop-a2ec4-default-rtdb.firebaseio.com",
+    projectId: "vip-shop-a2ec4",
+    storageBucket: "vip-shop-a2ec4.firebasestorage.app",
+    messagingSenderId: "429877342673",
+    appId: "1:429877342673:web:0d2b5443f46bc03ec670f0",
+    measurementId: "G-6XDFLW18FS"
+};
+
+// Запуск Firebase v8
+if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+}
+const db = firebase.database();
+
+// Кнопка автора (👤)
 (function() {
     const createBtn = () => {
+        if (document.getElementById('promo_btn')) return;
         const btn = document.createElement('div');
-        btn.id = "author_promo_btn";
-        btn.style.cssText = `position:fixed;bottom:20px;right:20px;z-index:10001;width:55px;height:55px;background:#ff6b00;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 0 15px rgba(255,107,0,0.5);border:2px solid rgba(255,255,255,0.2);transition:0.3s;user-select:none;`;
+        btn.id = "promo_btn";
+        btn.style.cssText = `position:fixed;bottom:20px;right:20px;z-index:10001;width:55px;height:55px;background:#ff6b00;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;box-shadow:0 0 15px rgba(255,107,0,0.5);border:2px solid rgba(255,255,255,0.2);animation:pBtn 2s infinite;`;
         btn.innerHTML = `<span style="font-size:24px;">👤</span>`;
         document.body.appendChild(btn);
 
         btn.onclick = async () => {
-            if (localStorage.getItem('promo_done')) return alert("ЛИМИТ: 1 ВВОД НАВСЕГДА");
-
+            if (localStorage.getItem('promo_done')) return alert("ЛИМИТ: 1 ВВОД");
             let p = prompt("ВВЕДИТЕ КОД АВТОРА:");
             if (!p) return;
             p = p.trim().toUpperCase();
-
             try {
-                // Авто-визначення бази: шукаємо або db, або firebase.database()
-                const database = (typeof db !== 'undefined') ? db : firebase.database();
-                const ref = database.ref('affiliates/' + p);
-                const snap = await ref.once('value');
-
-                if (snap.exists()) {
-                    await ref.update({ count: (snap.val().count || 0) + 1 });
+                const ref = db.ref('affiliates/' + p);
+                const s = await ref.once('value');
+                if (s.exists()) {
+                    await ref.update({ count: (s.val().count || 0) + 1 });
                     localStorage.setItem('promo_done', 'true');
                     alert("КОД АКТИВИРОВАН!");
-                } else {
-                    alert("КОД НЕ НАЙДЕН");
-                }
-            } catch (e) {
-                console.error(e);
-                alert("ОШИБКА БАЗЫ ДАННЫХ");
-            }
+                } else { alert("КОД НЕ НАЙДЕН"); }
+            } catch (e) { alert("ОШИБКА БАЗЫ"); }
         };
     };
-
-    // Чекаємо завантаження сторінки, щоб не зламати DOM
-    if (document.readyState === 'complete') createBtn();
-    else window.addEventListener('load', createBtn);
+    const st = document.createElement('style');
+    st.innerHTML = `@keyframes pBtn{0%,100%{transform:scale(1)}50%{transform:scale(1.1)}}`;
+    document.head.appendChild(st);
+    window.addEventListener('load', createBtn);
 })();
-
-
+// === КІНЕЦЬ НОВОГО БЛОКУ. ДАЛІ ЙДУТЬ ТВОЇ 1400 СТРОЧОК ===
 // === ДАЛІ ЙДЕ Твій ОСНОВНИЙ КОД (TitanDB, updateGlobalUI і т.д.) ===
 
         // TITAN DATABASE 6.0 — 55 УПРАЖНЕНИЙ С МАТРИЦЕЙ ТИПОВ
